[package]
name = "kotowaza"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-embed = { version = "6.4.0", features = ["include-exclude", "debug-embed"] }
rand = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
unicode-width = "0.1.9"
term_size = "0.3.2"
